@@ -2,6 +2,9 @@ Revision history for Git::DescribeVersion
 
 {{$NEXT}}
 
+  - Fallback to another git wrapper if one fails.
+    Closes rt-71622. Thanks to Matthew (mca1001) for the idea.
+
 1.003     2011-07-15T00:00:55Z
 
   - Add git-describe-version executable
